deploy/k8s/base/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biteiq-api
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: biteiq-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: biteiq-web
                port:
                  name: http
